--- a/_posts/TIL/2021-02-22-TIL copy.md
+++ b/_posts/TIL/2021-02-22-TIL copy.md
@@ -11,7 +11,7 @@ last_modified_at: '2021-02-22 22:00:00 +0800'
 - 특정 데이터를 입력하면 그 값을 이용하여 또 다른 값을 자동으로 계산해주는 서비스가 있다. 그런데 자동으로 계산된 결과가 음수일 경우, 자동계산 직후에는 음수가 출력되지만 데이터를 저장후 조회해 보면 절댓값이 조회되는 상황이다.
 
 ## 에러 원인 분석
-- 우선 해당 값이 DB에는 어떻게 저장되는지 확인해본 결과, 계산값이 음수가 나오더라도 DB에는 절댓값이 저장되고 있음을 확인했다. 따라서 저장 버튼을 누르고 난 후 다시 그 페이지를 조회하면, 저장되어있던 값이 `select`되기 떄문에 절댓값이 노출되는 것이다.
+- 우선 해당 값이 DB에는 어떻게 저장되는지 확인해본 결과, 계산값이 음수가 나오더라도 DB에는 절댓값이 저장되고 있음을 확인했다. 따라서 저장 버튼을 누르고 난 후 다시 그 페이지를 조회하면, 저장되어있던 값이 `select`되기 때문에 절댓값이 노출되는 것이다.
 
 ## 해결 방안 탐색
 - `xxx.vue` 파일에서 해당 값을 특정 형식으로 마스킹하고 있는데, 이때 값이 잘못 마스킹되고 있는지 확인해볼 필요가 있다.
