--- a/_posts/TIL/2021-02-23-TIL.md
+++ b/_posts/TIL/2021-02-23-TIL.md
@@ -21,8 +21,8 @@ last_modified_at: '2021-02-22 22:00:00 +0800'
 
 ```javaScript
 
-function enter(event) {
-    if(event.keyCode == 13) {
+function enter() {
+    if(event.keyCode == 13) { // 엔터키의 아스키코드는 13이다.
         document.getElementbyId("searchBtn").click();
     }
 }
@@ -45,12 +45,12 @@ function enter(event) {
         </select>
     </span>
     
-    <span id="textInput">
-        <input type="text" class="ipt w150" id="RR0100M001GE_inputNum1">
+    <span id="inputText">
+        <input type="text" id="text1" onkeypress="enter();">
         <em>-</em>
-        <input type="text" class="ipt w150" id="RR0100M001GE_inputNum2">
+        <input type="text" id="text2" onkeypress="enter();">
         <em>-</em>
-        <input type="text" class="ipt w150" id="RR0100M001GE_inputNum3">
+        <input type="text" id="text3" onkeypress="enter();">
     </span>
 
     ...
@@ -60,27 +60,60 @@ function enter(event) {
 
 ```
 
-- 결론 : **성공**, 하지만 기존에 작성되었던 코드는 .js 파일과 .html 파일을 따로 두고 있으므로 리팩토링이 필요하다. 
+- 결과 : **성공**, 하지만 기존에 작성되었던 코드는 `.js` 파일과 `.html` 파일을 따로 두고 있으므로 리팩토링이 필요하다. 
 
 ### 2번째 시도
-- xxx.js 파일로 가서 초기화와 관련된 코드들을 살펴보았고, 해당 기능이 구현되어있는지 살펴보았다. 제이쿼리를 사용한 코드가 있었고, 이를 활용하기로 하였다.
+- `xxx.js` 파일로 가서 초기화와 관련된 코드들을 살펴보았고, 해당 기능이 구현되어있는지 살펴보았다. 제이쿼리를 사용한 코드가 있었고, 이를 활용하기로 하였다. `.js` 파일에서 엔터키 이벤트를 처리하도록 수정하면서, `.html` 파일에서는 굳이 각각의 `<input>` 태그에 `onkeypress`라는 속성을 지정할 필요가 없게 되었다.
+
+```html
+
+<ul>
+
+    <span id="select1">
+        <label for="colorSelect" class="skip">색깔 구분</label>
+        <select id="colorSelect" name="color">
+            <option value="1">검정</option>
+            <option value="2">파랑</option>
+            <option value="3">초록</option>
+            <option value="4">빨강</option>
+        </select>
+    </span>
+    
+    <span id="inputText">
+        <input type="text" id="text1">
+        <em>-</em>
+        <input type="text" id="text2">
+        <em>-</em>
+        <input type="text" id="text3">
+    </span>
+
+    ...
+
+    <button type="button" id="searchBtn">검색</button>
+</ul>
+
+```
   
 ```javaScript
 
-    $('#inputText').keypress(function(e){
-    if( e.keyCode === 13 ) {
-        $('#searchBtn').click();
-    }
+    $('#text1').keypress(function(e) {
+        if( e.keyCode === 13 ) {
+            $('#searchBtn').click();
+        }
+    });
+
+    $('#text2').keypress(function(e) {
+        if( e.keyCode === 13 ) {
+            $('#searchBtn').click();
+        }
+    });
+
+    $('#text3').keypress(function(e) {
+        if( e.keyCode === 13 ) {
+            $('#searchBtn').click();
+        }
     });
 
 ```
 
-- 
-
- ```java
- 
-String value = new String(paramMap.get("paramter").replaceAll("[^-0-9]",""));
-
-```
-
-- 결과 : **성공**, 파라미터로 넘어온 음수 값이 DB에 음수로 잘 저장되고 또한 화면에서도 음수로 잘 나오는 것을 확인했다.
+- 결과 : 이벤트 관련 코드를 `.js` 파일로 따로 빼냈기 때문에 `.html` 문서는 가독성이 훨씬 좋아졌다. 또한 `.js` 파일에 관련 코드들을 함께 두면서 코드를 중복해서 사용하는 빈도를 줄일 수 있었다.
