--- a/_posts/2020/about-me/2100-04-18-about-me.md
+++ b/_posts/2020/about-me/2100-04-18-about-me.md
@@ -8,13 +8,13 @@ last_modified_at: '2100-04-18 23:00:00 +0800'
 
 ## Jiyoun You
 - ENTJ ✨
-- Web-developer-to-be 💻
+- Junior Web developer 💻
 - 한국어 / English 💬 
 
 <br>  
 
 ## Hello, world!
-[![Blog Badge](http://img.shields.io/badge/-Blog-blue?style=flat-square&logo=0E9648&link=https://jiyounyou.github.io/)](https://jiyounyou.github.io/)  Please visit my blog to see what I teach myself to become a web developer.
+[![Blog Badge](http://img.shields.io/badge/-Blog-blue?style=flat-square&logo=0E9648&link=https://jiyounyou.github.io/)](https://jiyounyou.github.io/)  Please visit my blog to see what I study as a junior web developer.
 
 ### Contact me here
 - If you want to contact me, send me an [![Gmail Badge](https://img.shields.io/badge/Gmail-d14836?style=flat-square&logo=Gmail&logoColor=white&link=mailto:younny418@gmail.com)](mailto:younny418@gmail.com).
@@ -29,8 +29,8 @@ last_modified_at: '2100-04-18 23:00:00 +0800'
 ### Currently Studying ✍🏻
 - Java
 - Spring Framework
-- Html & CSS
 - JavaScript
+- Vue.js
 
 
 ### Education
