--- a/_posts/http/2021-05-07-http-01.md
+++ b/_posts/http/2021-05-07-http-01.md
@@ -9,13 +9,10 @@ last_modified_at: '2021-05-07 22:00:00 +0800'
 
 ---
 
-[모든 개발자를 위한 HTTP 웹 기본 지식](https://www.inflearn.com/course/http-%EC%9B%B9-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC) 강의를 듣고 정리했습니다.
+김영한님의 [모든 개발자를 위한 HTTP 웹 기본 지식](https://www.inflearn.com/course/http-%EC%9B%B9-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC) 강의를 듣고 정리했습니다.
 
 
 ---
-![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-01-01.png){: .align-center}{: width="80%" height="80%"}
-
-
 # (1) 인터넷 통신
 
 ## 컴퓨터의 통신
