--- a/_posts/http/2021-05-10-http-03.md
+++ b/_posts/http/2021-05-10-http-03.md
@@ -342,6 +342,6 @@ HTTP-message   = start-line
 
 ## 단순한 HTTP
 
-- HTTP는 단순하다. 또한 HTTP 메시지도 단순하다.\
+- HTTP는 단순하다. 또한 HTTP 메시지도 단순하다.
 
 > 크게 성공하는 표준 기술은 단순하지만 확장이 가능한 기술이다.
