--- a/_posts/http/2021-05-11-http-04.md
+++ b/_posts/http/2021-05-11-http-04.md
@@ -139,11 +139,11 @@ last_modified_at: '2021-05-11 22:00:00 +0800'
 - 예를 들어 POST는 다음과 같이 사용된다.
 - HTML 양식에 입력된 필드와 같은 데이터 블록을 데이터 처리 프로세스에 제공한다.
     - 예) HTML FORM에 입력한 정보로 회원 가입, 주문 등에서 사용
-- 게시판, 뉴스 그룹, 메일링 리스트, 블로그 또는 유사한 기사 그룹에 메시지 게시
+- 게시판, 뉴스 그룹, 메일링 리스트, 블로그 또는 유사한 기사 그룹에 메시지를 게시한다.
     - 예) 게시판 글쓰기, 댓글 달기
-- 서버가 아직 식별하지 않은 새 리소스 생성
+- 서버가 아직 식별하지 않은 새 리소스를 생성한다.
     - 예) 신규 주문 생성
-- 기존 자원에 데이터 추가
+- 기존 자원에 데이터를 추가한다.
     - 예) 한 문서 끝에 내용 추가하기
 - 정리: 이 리소스 URI에 POST 요청이 오면 요청 데이터를 어떻게 처리할지 리소스마다 따로 정해야 한다. 기본적으로 정해진 것이 없다.
 
@@ -235,11 +235,11 @@ last_modified_at: '2021-05-11 22:00:00 +0800'
 
 ## 안전(Safe Methods)
 
-- 호출해도 리소스를 변경하지 않을 떄, 이를 안전하다고 한다.
+- 호출해도 리소스를 변경하지 않을 때, 이를 안전하다고 한다.
     - GET은 단순히 조회만 한다. 안전하다.
     - POST는 리소스를 변경할 수 있다. 안전하지 않다.
 - Q: 그래도 계속 호출해서 로그가 쌓여서 장애가 발생한다면?
-- A: 안전은 해당 리소스만 고려한다. 그런 부분까지 고려하지는 않는다.
+  - A: 안전은 해당 리소스만 고려한다. 그런 부분까지 고려하지는 않는다.
 
 ## 멱등(Idempotent Methods)
 
@@ -253,7 +253,7 @@ last_modified_at: '2021-05-11 22:00:00 +0800'
 
 ### 멱등 활용
 
-- 자동 복구 메커니즘
+- **자동 복구 메커니즘**에 활용할 수 있다.
 - 서버가 TIMEOUT 등으로 정상 응답을 못주었을 때, '클라이언트가 같은 요청을 다시 해 도 되는가?'의 판단 근거가 된다. 멱등하면 같은 요청을 여러번 해도 된다.
 - DELETE를 호출했는데 서버에서 응답하지 않는다. 클라이언트는 같은 DELETE 요청을 또 해도 되는가? DELETE는 멱등하기 때문에 같은 요청을 여러번 해도 된다.
 
