--- a/_posts/http/2021-05-11-http-04.md
+++ b/_posts/http/2021-05-11-http-04.md
@@ -26,7 +26,7 @@ last_modified_at: '2021-05-11 22:00:00 +0800'
 
 ### API URI 설계
 
-- 회원 목록 조회 `/read-memer-list`
+- 회원 목록 조회 `/read-member-list`
 - 회원 조회 `/read-member-by-id`
 - 회원 등록 `/create-member`
 - 회원 수정 `/update-member`
