--- a/_posts/http/2021-05-13-http-06.md
+++ b/_posts/http/2021-05-13-http-06.md
@@ -12,5 +12,138 @@ last_modified_at: '2021-05-13 22:00:00 +0800'
 김영한님의 [모든 개발자를 위한 HTTP 웹 기본 지식](https://www.inflearn.com/course/http-%EC%9B%B9-%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC) 강의를 듣고 정리했습니다.
 
 ---
+# (1) HTTP 상태 코드란?
+
+## 상태 코드
+
+- 클라이언트가 보낸 요청의 처리 상태를 응답에서 알려주는 기능, 응답 메시지의 start-line에 표시한다.
+- **1xx (Informational)**: 요청이 수신되어 처리중, 거의 사용하지 않음
+- **2xx (Successful)**: 요청 정상 처리
+- **3xx (Redirection)**: 요청을 완료하려면 추가 행동이 필요
+- **4xx (Client Error)**: 클라이언트 오류, 잘못된 문법등으로 서버가 요청을 수행할 수 없음
+- **5xx (Server Error)**: 서버 오류, 서버가 정상 요청을 처리하지 못함
+
+### 알 수 없는 상태코드를 만나면
+
+- 클라이언트가 인식할 수 없는 상태코드를 서버가 반환하면, 클라이언트는 상위 상태코드로 해석해서 처리한다.
+- 미래에 새로운 상태 코드가 추가되어도 클라이언트를 변경하지 않아도 된다.
+- 예)
+    - 299 ??? -> 2xx (Successful), 200대는 요청이 정상적으로 처리되었다는 상태 코드
+    - 451 ??? -> 4xx (Client Error), 300대는 클라이언트에 오류가 있다는 상태 코드
+    - 599 ??? -> 5xx (Server Error), 400대는 서버에 오류가 있다는 상태 코드
+
+# (2) 2xx - 성공
+
+## 2xx (Successful)
+
+- 클라이언트의 요청을 성공적으로 처리
+- 200 OK
+- 201 Created
+- 202 Accepted
+- 204 No Content
+
+## 200 OK
+
+- 클라이언트의 요청을 성공적으로 처리했다는 상태 코드
 
 ![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-01.png){: .align-center}{: width="100%" height="100%"}
+
+## 201 Created
+
+- 요청 성공해서 새로운 리소스가 생성되었다는 상태 코드
+- 생성된 리소스는 응답의 Location 헤더 필드로 식별
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-02.png){: .align-center}{: width="100%" height="100%"}
+
+## 202 Accepted
+
+- 요청이 접수되었으나 처리가 완료되지 않았다는 상태 코드
+- 배치 처리 같은 곳에서 사용한다.
+    - 예) 요청 접수 후 1시간 뒤에 배치 프로세스가 요청을 처리하는 경우
+
+## 204 No Content
+
+- 서버가 요청을 성공적으로 수행했지만, 응답 페이로드 본문에 보낼 데이터가 없는 경우의 상태 코드
+- 예) 웹 문서 편집기에서 save 버튼은 클라이언트에서 save 버튼을 눌렀을 때 저장은 완료되었지만 그 결과로 아무런 응답이 없다. 그냥 같은 화면을 유지한다. 이런 경우 204를 리턴한다.
+- 결과 내용이 없어도 204 메시지만으로 성공을 인식할 수 있다.
+
+# (3) 3xx - 리다이렉션1
+
+## 3xx (Redirection)
+
+- 요청을 완료료하기 위해 유저 에이전트(주로 웹 브라우저)의 추가 조치 필요
+- 300 Multiple Choices
+- 301 Moved Permanently
+- 302 Found
+- 303 See Other
+- 304 Not Modified
+- 307 Temporary Redirect
+- 308 Permanent Redirect
+
+## 리다이렉션 이해
+
+- 웹 브라우저는 3xx 응답의 결과에 Location 헤더가 있으면, Location 위치로 자동 이동한다. 이를 리다이렉트라 한다.
+
+### 자동 리다이렉트 흐름
+
+- 어떤 페이지가 있는데, 더이상 그 경로를 사용하지 않고 새로운 경로를 쓴다고 가정한다. 기존에 공유되었던 URL로 접속을 시도하면 자동으로 새로운 URL로 이동하도록 301 응답 코드를 보낸다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-03.png){: .align-center}{: width="100%" height="100%"}
+
+### 종류
+
+- **영구 리다이렉션** - 특정 리소스의 URI가 영구적으로 이동
+    - 예) `/members` → `/users`
+    - 예) `/event` → `/new-event`
+- **일시 리다이렉션** - 일시적인 변경
+    - 주문 완료 후 주문 내역 화면으로 이동
+    - PRG: Post/Redirect/Get
+- **특수 리다이렉션**
+    - 결과 대신 캐시를 사용
+
+## 영구 리다이렉션
+
+- 301, 308: 리소스의 URI가 영구적으로 이동되었다는 의미
+- 원래의 URL를 사용하지 않는다. 검색 엔진 등에서도 변경을 인지한다.
+
+### 301 Moved Permanently
+
+- 리다이렉트시 요청 메서드가 GET으로 변하고, 본문이 제거될 수도 있다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-04.png){: .align-center}{: width="100%" height="100%"}
+
+### 308 Permanent Redirect
+
+- 301과 기능은 동일하다.
+- 리다이렉트시 요청 메서드와 본문을 유지한다. 예를 들어, 처음에 POST를 보냈다면 리다이렉트로 POST를 유지하고 메시지가 존재할 경우 메시지도 유지한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-05.png){: .align-center}{: width="100%" height="100%"}
+
+# (4) 3xx - 리다이렉션2
+
+## 일시적인 리다이렉션
+
+- 리소스의 URI가 일시적으로 변경된다면 검색 엔진 등에서 URL을 변경하면 안된다.
+
+### 302 Found
+
+- 리다이렉트시 요청 메서드가 GET으로 변하고, 본문이 제거될 수 있다. (MAY)
+
+### 307 Temporary Redirect
+
+- 302와 기능은 같다.
+- 리다이렉트시 요청 메서드와 본문을 유지한다. (요청 메서드를 변경하면 안된다. MUST NOT)
+
+### 303 See Other
+
+- 302와 기능은 같다.
+- 리다이렉트시 요청 메서드가 GET으로 변경된다.
+
+## PRG: Post/Redirect/Get
+
+### 일시적인 리다이렉션 예시
+
+- POST로 주문 후 웹 브라우저를 새로고침 한다면?
+    - 새로고침은 다시 요청하는 것이므로, 중복 주문이 될 수 있다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-06.png){: .align-center}{: width="100%" height="100%"}
