--- a/_posts/http/2021-05-11-http-04.md
+++ b/_posts/http/2021-05-11-http-04.md
@@ -48,7 +48,7 @@ last_modified_at: '2021-05-11 22:00:00 +0800'
 - 리소스를 식별할 수 있도록 설계하고, URI 계층 구조를 활용한다.
 - **회원** 목록 조회 `/members`
 - **회원** 조회 `/members/{id}`
-- **회원** 등록 `/members/{id}`
+- **회원** 등록 `/members`
 - **회원** 수정 `/members/{id}`
 - **회원** 삭제 `/members/{id}`
 - 참고 : 위의 예시에서는 계층 구조상 상위를 컬렉션으로 보고있기 때문에 복수 단어를 사용했다.
