--- a/_posts/http/2021-05-13-http-06.md
+++ b/_posts/http/2021-05-13-http-06.md
@@ -144,6 +144,106 @@ last_modified_at: '2021-05-13 22:00:00 +0800'
 ### 일시적인 리다이렉션 예시
 
 - POST로 주문 후 웹 브라우저를 새로고침 한다면?
-    - 새로고침은 다시 요청하는 것이므로, 중복 주문이 될 수 있다.
+    - 새로고침은 다시 요청하는 것이다. 따라서 회원은 중복해서 주문을 하려는 의도가 아니었지만, 중복 주문이 될 수 있다. 원칙적으로는 같은 주문 번호로 동일한 요청이 발생하면 중복 주문이 되지 않도록 서버에서 막아야 한다.
 
 ![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-06.png){: .align-center}{: width="100%" height="100%"}
+
+- POST로 주문 후 새로 고침으로 인한 중복 주문 방지하려면, POST로 주문 후에 주문 결과 화면을 GET 메서드로 리다이렉트한다.
+    - 새로고침을 해도 결과 화면을 GET으로 조회한다.
+    - 중복 주문 대신에 결과 화면만 GET으로 다시 요청한다.
+- PRG 이후 리다이렉트
+    - URL이 이미 POST → GET으로 리다이렉트 된 상태이다.
+    - 새로고침 해도 GET으로 결과 화면만 조회한다.
+
+![http]({{ https://jiyounyou.github.io/ }}{{ site.baseurl }}/assets/images/post/http/http-06-07.png){: .align-center}{: width="100%" height="100%"}
+
+## 302, 307, 303에 관하여
+
+### 역사
+
+- 처음 302 스펙의 의도는 HTTP 메서드를 유지하는 것이었다.
+- 그런데 웹 브라우저들이 대부분 GET으로 바꾸어 버린다. 일부를 다르게 동작한다.
+- 그래서 모호한 302를 대신하는 명확한 307, 303이 등장했다. (301 대응으로 308 등장)
+
+### 현실
+
+- 307, 303을 권장하지만 현실적으로 이미 많은 애플리케이션 라이브러리들이 302를 기본 값으로 사용한다.
+- 자동 리다이렉션시에 GET으로 변해도 되면 그냥 302를 사용해도 큰 문제가 없다.
+
+## 기타 리다이렉션
+
+### 300, 304
+
+- 300 Multiple Choices:  사용하지 않는다.
+- 304 Not Modified
+- 캐시를 목적으로 사용한다.
+- 클라이언트에세 리소스가 수정되지 않았음을 알려준다.따라서 클라이언트는 로컬 PC에 저장된 캐시를 사용한다. (캐시로 리다이렉트 한다.)
+- 304 응답은 응답에 메시지 바디를 포함하면 안된다. 로컬 캐시를 사용한다.
+- 조건부 GET, HEAD 요청시 사용한다.
+
+# (5) 4xx - 클라이언트 오류, 5xx - 서버 오류
+
+## 4xx (Client Error)
+
+### 클라이언트 오류
+
+- 클라이언트의 요청에 잘못된 문법 등으로 서버가 요청을 수행할 수 없음을 의미한다.
+- **오류의 원인이 클라이언트에 있음!**
+- 중요! 클라이언트가 이미 잘못된 요청, 데이터를 보내고 있기 때문에, 똑같은 재시도를 해도 무조건 실패한다. 같은 요청을 요청이 성공할 가능성이 없다. 요청을 수정해서 보내야 한다.
+
+## 400 Bad Reque
+
+### 클라이언트가 잘못된 요청을 해서 서버가 요청을 처리할 수 없다
+
+- 요청 구문, 메시지 등등의 오류
+- 클라이언트는 요청 내용을 다시 검토하고 보내야 한다.
+- 예) 요청 파라미터가 잘못되거나, API 스펙이 맞지 않을 때
+
+## 401 Unauthorized
+
+### 클라이언트가 해당 리소스에 대한 인증이 필요하다
+
+- 인증(Authentication)되지 않은 상태임을 의미한다.
+- 401 오류 발생시 응답에 `WWW-Authenticate` 헤더와 함께 인증 방법을 설명해야 한다.
+- 참고
+    - 인증(Authentication): 본인이 누구인지 확인 → 로그인
+    - 인가(Authorization): 권한부여 → ADMIN 권한처럼 특정 리소스에 접근할 수 있는 권한, 인증이 있어야 인가가 있음
+- 401 상태코드는 오류 메시지가 Unauthorized 이지만 인증 되지 않음(로그인이 되지 않음)을 나타내는 것이다. Unauthenticated가 더 명확한 이름이다.
+
+## 403 Forbidden
+
+### 서버가 요청을 이해했지만 승인을 거부함
+
+- 주로 인증 자격 증명은 있지만, 접근 권한이 불충분한 경우에 발생하는 오류이다.
+- 예) 어드민 등급이 아닌 사용자가 로그인은 정상적으로 했지만, 어드민 등급의 리소스에 접근하는 경우
+
+## 404 Not Found
+
+### 요청 리소스를 찾을 수 없음
+
+- 요청 리소스가 서버에 없음을 나타낸다.
+- 또는 클라이언트가 권한이 부족한 리소스에 접근하려 하는데, 해당 리소스를 숨기고자 할 때 404 코드를 사용한다.
+
+## 5xx (Server Error)
+
+### 서버 오류
+
+- 서버 문제로 오류가 발생할 때 500번대 코드를 리턴한다.
+- 서버에 문제가 있기 때문에 재시도하면 성공할 수도 있다. (서버가 복구되거나 하는 상황)
+- 예) NullPointerException, DB에 일시적으로 접근이 불가한 상황
+- 500대 에러는 웬만하면 만들면 안된다. 정말 심각한 서버의 오류만 500대 에러로 처리한다.
+    - 예) 20세 이상의 서비스에 15세가 로그인을 시도한다면, 비즈니스 로직의 예외 케이스이기 때문에 500번대 에러로 해결하면 안된다.
+
+## 500 Internal Server Error
+
+### 서버 문제로 오류 발생, 애매하면 500 오류
+
+- 서버 내부 문제로 오류 발생했음을 의미한다.
+- 애매하면 500 오류
+
+## 503 Service Unavailable
+
+### 서비스 이용 불가
+
+- 서버가 일시적인 과부하 또는 예정된 작업으로 잠시 요청을 처리할 수 없음을 의미한다.
+- Retry-After 헤더 필드로 얼마뒤에 복구되는지 보낼 수도 있음
