--- a/_posts/http/2021-05-13-http-06.md
+++ b/_posts/http/2021-05-13-http-06.md
@@ -246,4 +246,4 @@ last_modified_at: '2021-05-13 22:00:00 +0800'
 ### 서비스 이용 불가
 
 - 서버가 일시적인 과부하 또는 예정된 작업으로 잠시 요청을 처리할 수 없음을 의미한다.
-- Retry-After 헤더 필드로 얼마뒤에 복구되는지 보낼 수도 있음
+- Retry-After 헤더 필드로 얼마뒤에 복구되는지 보낼 수도 있다.
